Modifique la cabecera y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Hyperblog
                 <stan id="tagline">Tu blog de
-                confianza</stan>
+                cabecera</stan>
             </div>    
             <div id="post">
                 <h1>Este es el título
